--- a/Mission/Mission.csproj
+++ b/Mission/Mission.csproj
@@ -154,6 +154,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Home.css" />
     <Content Include="Content\Images\Shirt and Tie.jpg" />
     <Content Include="Content\Images\Wood.jpg" />
     <Content Include="favicon.ico" />
