--- a/Mission/Mission.csproj
+++ b/Mission/Mission.csproj
@@ -150,6 +150,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Missions.cs" />
+    <Compile Include="Models\QA.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -200,6 +201,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Mission.cshtml" />
+    <Content Include="Views\Home\Thanks.cshtml" />
     <Content Include="Views\Home\MissionFAQ.cshtml" />
   </ItemGroup>
   <ItemGroup>
